# wallcat

./: .editorconfig  .gitignore  LICENSE  README.md  ROADMAP.md  UV.md  pyproject.toml  ruff.toml
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: pull_request_template.md
config/: categories.yaml  config.yaml
docs/: CONTRIBUTING.md
src/: main.py
src/project_starter/: example.py  main.py
src/wallcat/: cli.py  main.py
src/wallcat/core/: __init__.py  models.py  organizer.py  rules.py
src/wallcat/core/ai/: base.py  clip.py
tests/: test_ultis.py
